# dictionary

./: .gitignore  .gitmodules  CMakeLists.txt
src/: co_util.h  dict_def.h  dict_parse.h  json_coro_cursor.h  json_util.h  links.h  main.cpp  save_words.cpp  sdict_file.h  styles.h  text_parse.h  ui.h  ui_layout.fl  util.h
tests/: CMakeLists.txt  test_sdict.cpp
